<resources>
    <string name="app_name">Acandi Tourism</string>
    <string name="titulo">Acandi Tourism</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="initses">Login</string>
    <string name="register">Sign Up</string>
    <string name="rpassword">Retype password</string>
    <string name="cancel">Cancel</string>
    <string name="email">E-Mail</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="menuprofile">My Profile</string>
    <string name="twpass">Wrong password</string>
    <string name="twuser">The user doesn\'t exist</string>
    <string name="treg">Successfully registered</string>
    <string name="tpassm">Passwords don\'t match</string>
    <string name="tempty">Please fill in all the blanks</string>
    <string name="main">Main</string>
    <string name="acinfo">Acandí is a municipality from Colombia located in the north of the department of Chocó, in the northwersten Colombia, on the shores of the Caribbean Sea. It limits with Panama and has many beautiful sides like Capurgana.</string>
    <string name="acinfo2">Acandí is rich in biodiversity in fauna and flora, that is because this lands are between the Darien\'s forests. It has various exotics species. The economy is mainly based on turism, agriculture, cattle and artesanal fishing.</string>
    <string name="acinfo3">What are you waiting to visit Acandí? Come here and enjoy the beautiful coasts and the most delicious food and also enjoy the beautiful biodiversity here, you will want to come here again, you will not regret.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hotel">Hotels</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_restaurant">Restaurants</string>
    <string name="title_activity_turistic">Tourist sites</string>
    <string name="sHotel">Hotels</string>
    <string name="sHotel2">More Hotels</string>
    <string name="sRest">Restaurants</string>
    <string name="Signout">Sign out</string>
    <string name="sTuris">Tourist Sites</string>
    <string name="hotel2">Hotel 2</string>
    <string name="hotel3">Hotel 3</string>
    <string name="hotel1">Hotel 1</string>
    <string name="rest1">Restaurant 1</string>
    <string name="rest2">Restaurant 2</string>
    <string name="rest3">Restaurant 3</string>
    <string name="tour1">Tour. Site 1</string>
    <string name="tour2">Tour. Site 2</string>
    <string name="tour3">Tour. Site 3</string>
    <string name="thotel1">Toucan cottage is an excellent site to enjoy the nature, it is close to the Darien Forest and also close to the Avocados Bay in Capurgana, come here and enjoy a beautiful side to rest and feel the nature.</string>
    <string name="thotel2">Gecko Inn is the ideal hotel to rest and enjoy the sun, it has a classic style with a balcony where you can watch the sea and feel the wind. Gecko Inn is located in Capurganá close to the sea.</string>
    <string name="thotel3">Tacarcuna Lodge is a very beautiful side with an excellent client service, it has a beautiful garden where you can sit and enjoy the nature.</string>
    <string name="tihotel1">Toucan Cottage</string>
    <string name="tihotel2">Gecko Inn</string>
    <string name="tihotel3">Tacarcuna Lodge</string>
    <string name="trest1">If you want to enjoy the typical food of Chocó, come and enjoy in Capurgarepa, here you can eat typical food like bocachico, yucca, avocado salad and many other typical food that you will enjoy so much.</string>
    <string name="trest2">Gecko Cafe is excellent if you want a formal date, also you can enjoy delicious food made by expert chefs who cooks the best typical food in Capurganá</string>
    <string name="trest3">Josefina restaurant is excellent if you want to feel like in family, it has very kind persons. If you want to eat delicious food and be like in family, come here and enjoy.</string>
    <string name="tirest1">Capurgarepa</string>
    <string name="tirest2">Gecko Cafe</string>
    <string name="tirest3">Josefina restaurant</string>
    <string name="ttour1">Avocado bay is the most beautiful bay that you can see in the Caribbean Sea. It is close to the Darien Forest and has blue water with high vegetation.</string>
    <string name="ttour2">Batatilla Waterfall is an excellent side to come and enjoy with your family, it has a very fresh water and is close to Acandí</string>
    <string name="ttour3">Darien Forest is an excellent side if you want to know new species of animals and plants. It is a very wet forest where you can see many amphibious.</string>
    <string name="titour1">Avocado bay</string>
    <string name="titour2">Batatilla Waterfall</string>
    <string name="titour3">Darien Forest</string>
    <string name="empty" />
    <string name="title_activity_hotel_d">HotelDActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="options">Options</string>
    <string name="title_activity_main_d">MainDActivity</string>
    <string name="title_activity_restaurant_d">RestaurantDActivity</string>
    <string name="lhotel1">The Bohemian</string>
    <string name="lhotel2">The Mornings</string>
    <string name="lhotel3">Kachikine</string>
    <string name="lhotel4">Acuali Eco hostel</string>
    <string name="lprice1">Price: $80.000</string>
    <string name="lprice2">Price: $306.000</string>
    <string name="lprice3">Price: $60.000</string>
    <string name="lprice4">Price: $150.000</string>
    <string name="lscore1">Good 7.7</string>
    <string name="lscore2">Very Good 8.1</string>
    <string name="lscore3">Fantastic 9.0</string>
    <string name="lscore4">Fabulous 8.7</string>
    <string name="linfo1">The Bohemian offers accommodation in Capurganá. Besides, there\'s free private parking. Some rooms have mountain or garden views. The establishment has a 24-hour reception. In the surroundings you can practice various activities, such as fishing, snorkeling and hiking. We speak your language!</string>
    <string name="linfo2">Hotel The Mornings has a diving school, a souvenir shop and a beach volleyball court. The friendly staff can arrange excursions in the surrounding area at an additional cost. The hotel\'s restaurant serves international cuisine and the bar serves snacks. It is only possible to access the Hotel The Mornings by plane or boat. We speak your language!</string>
    <string name="linfo3">The Kachikine is located in Capurganá, has a sun terrace and sea views. In the area you can practice various activities, such as snorkeling and hiking. This accommodation also has very good score for the best value-price relation in Capurganá. Customers get more out of their money compared to other accommodations in the same city.</string>
    <string name="linfo4">The Acuali Ecohostal has a restaurant and spa and is located in Capurganá on the beautiful Caribbean coast. This secluded hostel organizes outdoor activities. Rooms feature rustic wood décor and spectacular views of the rainforest. They also include a private bathroom with shower and toilet. The shared room has a shared bathroom.</string>
</resources>
