<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.david.practica2.MainDActivity"
    tools:showIn="@layout/app_bar_main_d">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.david.practica2.MainActivity"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/map"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:text="@string/acinfo"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/frog"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:text="@string/acinfo2"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/cap"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:text="@string/acinfo3"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
